# rag-server

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  Dockerfile  FellowQuant-RAG-Server.postman_collection.json  README.md  docker-compose.yml  llm.yaml  pyproject.toml
.claude/: gsd-file-manifest.json
.github/workflows/: publish.yml
.omx/: tmux-hook.json
.omx/state/: skill-active-state.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation-storage/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-document-ingestion-pipeline/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  INDEXING.md  MODELS.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  e683e765056c_add_indexed_at_to_documents.py
docs/: docling-memory-leak.md  ingestion-memory-fix.md
scripts/: batch_ingest.sh  biblioteca_batch_ingest.sh  clean_and_reingest_biblioteca.sh  ram_monitor.sh  smoke_test_cli.sh  start.sh  start_mcp.sh  verify_api.py  verify_ingestion.py  verify_llm.py  verify_retrieval.py  verify_storage.py
src/rag_server/: config.py  main.py  mcp_server.py
src/rag_server/api/: ask.py  (+5 more)
tests/: test_config_defaults.py  test_docker_packaging.py  test_epub_format_support.py  test_epub_parser.py  test_http_mcp_config.py  test_pdf_parser_batches.py  test_pipeline_batches.py  test_resource_guard.py  test_setup_wizard_http.py  test_startup_recovery.py  test_upload_streaming.py
(+77 files in other folders)
