[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fellowquant-rag"
version = "0.1.0"
description = "RAG server for quantitative finance research with Claude Code integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "qdrant-client>=1.16.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.0.0",
    "docling>=2.66.0",
    "FlagEmbedding>=1.3.5",
    "nbformat>=5.9",
    "pylatexenc==2.10",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0.0",
    "tiktoken>=0.7.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
    "openai>=1.60.0",
    "boto3>=1.42.0",
    "sse-starlette>=1.8.0",
    "tenacity>=9.0.0",
    "pyyaml>=6.0.0",
    "fastmcp>=2.0.0",
    "psutil>=7.0.0",
    "pypdfium2>=5.5.0",
]

[project.scripts]
rag-server = "rag_server.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_server"]
